Fix about menu on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -130,3 +130,21 @@ h1, h2, h3, h4, h5 {
 .footer {
   text-align: center;
 }
+
+/* Custom, iPhone Retina */
+   @media only screen and (max-width : 767px) {
+     .page-top {
+       margin-top: 140px;
+     }
+
+     a.anchor {
+       top: -180px;
+     }
+
+
+   }
+
+   /* Extra Small Devices, Phones */
+   @media only screen and (min-width : 480px) {
+
+   }
